Harden FcitxTest setup and isolation; pin Robolectric SDK globally
- Subscribe to the event flow before starting the engine (it has no replay,
  so a ReadyEvent could be missed) and bound @BeforeClass with a timeout,
  which the Timeout rule does not cover.
- Drain events until the channel has been quiet, not in one sweep that
  reset()'s late events can outrun, and forget the last input panel.
- Cancel the collector scope; drop a meaningless wait loop and unused
  helpers; fix a misnamed test.
- robolectric.properties pins SDK 35 for every Robolectric test, with an
  ignored SDK 36 canary to retry after upgrading Robolectric.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>